# topobench

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  format_and_lint.sh  hopsem_ablation_classic_datasets.sh  hopsem_ablation_mantra.sh  pyproject.toml  uv_env_setup.sh
.github/workflows/: docs.yml  lint.yml  test.yml  update_leaderboard.yml
2026_tdl_challenge/: run_evaluation.ipynb  utils.py
configs/: run.yaml
configs/callbacks/: default.yaml  model_timer.yaml
configs/dataset/graph/: AQSOL.yaml  BBB_Martins.yaml  CYP3A4_Veith.yaml  Caco2_Wang.yaml  Clearance_Hepatocyte_AZ.yaml  IMDB-BINARY.yaml  IMDB-MULTI.yaml  MUTAG.yaml  NCI1.yaml  NCI109.yaml  PROTEINS.yaml  REDDIT-BINARY.yaml  US-county-demos.yaml  ZINC.yaml  ZINC_OGB.yaml  amazon_ratings.yaml  cocitation_citeseer.yaml  cocitation_cora.yaml  cocitation_pubmed.yaml  graphuniverse_inductive.yaml  graphuniverse_inductive_triangle.yaml  graphuniverse_transductive.yaml  manual_dataset.yaml  minesweeper.yaml  ogbg-molhiv.yaml  ogbg-molpcba.yaml  questions.yaml  roman_empire.yaml  tolokers.yaml
configs/dataset/hypergraph/: 20newsgroup.yaml  ModelNet40.yaml  Mushroom.yaml  NTU2012.yaml  coauthorship_cora.yaml  coauthorship_dblp.yaml  cocitation_citeseer.yaml  cocitation_cora.yaml  cocitation_pubmed.yaml  zoo.yaml
configs/dataset/pointcloud/: geometric_shapes.yaml
configs/dataset/simplicial/: mantra_betti_numbers.yaml  mantra_genus.yaml  mantra_name.yaml  mantra_orientation.yaml
configs/evaluator/: classification.yaml  default.yaml  regression.yaml
configs/experiment/: example.yaml  hopse_g_gnn_cell.yaml  hopse_g_gnn_cell_zinc.yaml  hopse_g_gnn_simplicial.yaml  hopse_m_gnn_cell.yaml  hopse_m_gnn_cell_zinc.yaml  hopse_m_gnn_mantra.yaml  hopse_m_gnn_simplicial.yaml  hopse_m_gnn_simplicial_zinc.yaml  sann_classic_zinc.yaml  sann_gpse.yaml  sann_rand.yaml  sann_zero.yaml
configs/hydra/: default.yaml
configs/logger/: wandb.yaml
configs/loss/: default.yaml
configs/model/cell/: can.yaml  cccn.yaml  ccxn.yaml  cwn.yaml  hopse_g.yaml  hopse_m.yaml  sann.yaml  sann_online.yaml  topotune.yaml  topotune_onehasse.yaml
configs/model/combinatorial/: topotune.yaml
configs/model/graph/: gat.yaml  gcn.yaml  gcn_dgm.yaml  gin.yaml  gps.yaml  graph_mlp.yaml  hopse_gat.yaml  hopse_gcn.yaml  hopse_gin.yaml  nsd.yaml
configs/model/hypergraph/: alldeepset.yaml  allsettransformer.yaml  edgnn.yaml  unignn.yaml  unignn2.yaml
configs/model/non_relational/: mlp.yaml
configs/model/pointcloud/: deepset.yaml
configs/model/simplicial/: hopse_g.yaml  hopse_m.yaml  san.yaml  sann.yaml  sann_online.yaml  sccn.yaml  sccnn.yaml  sccnn_custom.yaml  scn.yaml  topotune.yaml  topotune_onehasse.yaml
configs/paths/: test.yaml
configs/transforms/: custom_example.yaml  no_transform.yaml
configs/transforms/data_manipulations/: barycentric_subdivision.yaml  combined_feature_encodings.yaml  combined_positional_and_structural_encodings.yaml  data_fields_to_dense.yaml  different_gaus_features.yaml  identity.yaml  (+21 more)
docs/: Makefile  build_docs.sh  watch_and_regenerate.sh
docs/api/: index.rst
docs/scripts/: fetch_leaderboard_results.py
docs/tdl-challenge-2026/: index.rst
scripts/: cwn.sh  gat.sh  gcn.sh  gin.sh  hopse_g.sh  hopse_m.sh  hopse_m_ablation.sh  launch_missing_neighborhood_ablation.sh  sann.sh  sccnn.sh  topotune.sh
scripts/base/: collect_failed.sh  logging.sh
scripts/hopse_plotting/: aggregator.py  best_rerun_sh_generator.py  hyperparam_analysis.py  main_loader.py  main_plot.py  plot_topology_timing.py  process_preprocess_ablation.py  process_reruns.py  seed_n_distribution_plots.py  table_generator.py  timing_table_generator.py  utils.py
scripts/old/: download_gpse.sh  finish.sh  graph_baselines.sh  reproduce.sh  reproduce_runs_preprocess.sh
scripts/rebuttal/: base_gnn_scripts.sh  reproduce.sh  scripts.sh  single.sh
scripts/results_processing/: generate_reproduce.bash  preprocess.bash  refetch.bash
scripts/topotune/: search_gccn_cell.sh  search_gccn_simplicial.sh
test/: __init__.py  conftest.py  test_tutorials.py
test/_utils/: __init__.py  flow_mocker.py  nn_module_auto_test.py  simplified_pipeline.py
test/callbacks/: test_best_epoch_metrics.py  test_timer_callback.py
test/data/: __init__.py
test/evaluator/: test_evaluator.py
test/loss/: test_dataset_loss.py  test_dgm_loss.py
test/model/: test_model.py
test/nn/: __init__.py
test/optimizer/: test_optimizer.py
test/pipeline/: test_pipeline.py
test/utils/: test_config_resolvers.py  test_instantiators.py  test_logging_utils.py  test_rich_utils.py  test_utils.py
topobench/: run.py
topobench/dataloader/: dataloader.py
topobench/evaluator/: evaluator.py
topobench/model/: model.py
topobench/utils/: config_resolvers.py
tutorials/: count_params.ipynb  download.py
(+288 files in other folders)
